# pugio

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  doc.yml  release.yml
examples/: config.toml
pugio-lib/: Cargo.toml
pugio-lib/src/: cargo.rs  coloring.rs  dot.rs  error.rs  graph.rs  lib.rs  template.rs
src/: cargo.rs  coloring.rs  command.rs  config.rs  dot.rs  graph.rs  main.rs  template.rs
