[package]
name = "pugio"
authors = ["Michael Yang"]
description = "A command-line dependency binary size graph visualisation tool"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/my4ng/pugio"
keywords = ["bloat", "perf", "dot"]
categories = ["command-line-utilities", "development-tools", "visualization"]
rust-version = "1.88"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = [
    "std",
    "help",
    "usage",
    "error-context",
    "derive",
], default-features = false }
colorgrad = { version = "0.8", features = ["preset"], default-features = false }
humansize = "2.1"
open = "5"
petgraph = { version = "0.8", features = [
    "std",
    "stable_graph",
], default-features = false }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
