[package]
name = "pugio"
authors = ["Michael Yang"]
description = "A command-line dependency binary size graph visualisation tool"
version = "0.1.3"
edition = "2024"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/my4ng/pugio"
keywords = ["bloat", "perf", "dot"]
categories = ["command-line-utilities", "development-tools", "visualization"]
rust-version = "1.88"

[dependencies]
anyhow = "1"
cfg-if = "1"
clap = { version = "4.5", features = [
    "std",
    "help",
    "usage",
    "error-context",
    "derive",
], default-features = false }
colorgrad = { version = "0.8", features = ["preset"], default-features = false }
humansize = "2.1"
open = "5.3"
parse-size = "1.1"
petgraph = { version = "0.8", features = [
    "std",
    "stable_graph",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tinytemplate = "1.2"

[dependencies.regex-lite]
version = "0.1"
optional = true

[dependencies.serde_with]
version = "3.16"
optional = true

[dependencies.toml]
version = "0.9"
default-features = false
features = ["std", "serde", "parse"]
optional = true

[features]
default = ["regex", "config"]
regex = ["dep:regex-lite"]
config = ["dep:serde_with", "dep:toml"]

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
