[workspace]
members = [".", "pugio-lib"]

[workspace.package]
authors = ["Michael Yang"]
version = "0.2.0"
edition = "2024"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/my4ng/pugio"
keywords = ["bloat", "perf", "dot"]
rust-version = "1.88"

[workspace.dependencies]

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 1

# ==================================================================================================

[package]
name = "pugio"
authors.workspace = true
description = "A command-line dependency binary size graph visualisation tool for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools", "visualization"]
rust-version.workspace = true

[dependencies.pugio-lib]
path = "pugio-lib"

[dependencies]
anyhow = "1"
cfg-if = "1"
clap = { version = "4.5", features = [
    "std",
    "help",
    "usage",
    "error-context",
    "derive",
], default-features = false }
open = "5.3"
parse-size = "1.1"
serde = { version = "1", features = ["derive"], optional = true }

[dependencies.regex-lite]
version = "0.1"
optional = true

[dependencies.toml]
version = "0.9"
default-features = false
features = ["std", "serde", "parse"]
optional = true

[features]
default = ["regex", "config"]
regex = ["dep:regex-lite"]
config = ["dep:serde", "dep:toml"]

[lints]
workspace = true
